src/views/certifications/components/certifications-hero/certifications-hero.module.css
/**
 * Base spacing 
 */
.root {
	padding-bottom: 220px;
	padding-top: 144px;

	/* relative position allows background absolute position to cover the hero */
	position: relative;
}

/**
 * Background base styles
 */
.backgroundBase {
	bottom: 0;
	left: 0;
	overflow: hidden;
	position: absolute;
	right: 0;
	top: 0;
	z-index: -1;
}

/**
 * Slot layout
 */
.rootLayout {
	display: flex;
	flex-wrap: wrap;
	gap: 64px;
}

.startSlot {
	flex: 25em 2 1;
	max-width: 600px;
	min-width: 0;
}

.endSlot {
	position: relative;
	flex: 25em 1 1;
	margin-left: auto;
	min-width: 0;
}

/**
 * Text component
 */
.textRoot {
	display: flex;
	flex-direction: column;
	gap: 32px;

	&.foreground-dark {
		--color: var(--token-color-foreground-strong);
	}

	&.foreground-light {
		--color: var(--token-color-foreground-high-contrast);
	}
}

.textHeading {
	composes: hds-typography-display-500 from global;
	color: var(--color);
	font-size: 40px;
	font-weight: var(--token-typography-font-weight-bold);
	margin: 0;

	@media (--dev-dot-tablet-up) {
		font-size: 54px;
	}
}

.textDescription {
	composes: hds-typography-display-300 from global;
	color: var(--color);
	font-weight: var(--token-typography-font-weight-medium);
	margin: 0;
}

